--- a/src/languages/rus/russian.json
+++ b/src/languages/rus/russian.json
@@ -14,5 +14,10 @@
   "Booking": "Bookingfeww",
   "Home": "Home2eed",
   "Search": "Searchdad",
-  "Profile": "Profiledaw"
+  "Profile": "Profiledaw",
+    "movePage":" This page doesn’t exist. You’ll be redirected to the homepage shortlwdawdy...",
+    "ErrorPage": "404 - Page Not Founddad",
+    "GoHome": "Go to Homepage Nowsws"
+
+
 }
