--- a/src/languages/rus/russian.json
+++ b/src/languages/rus/russian.json
@@ -17,7 +17,9 @@
   "Profile": "Profiledaw",
     "movePage":" This page doesn’t exist. You’ll be redirected to the homepage shortlwdawdy...",
     "ErrorPage": "404 - Page Not Founddad",
-    "GoHome": "Go to Homepage Nowsws"
+    "GoHome": "Go to Homepage Nowsws",
+    "BookNow": "Book Now"
+
 
 
 }
