--- a/src/languages/uz/uzbek.json
+++ b/src/languages/uz/uzbek.json
@@ -17,6 +17,8 @@
   "Profile": "Profil",
   "movePage": " Bu sahifa mavjud emas. Siz tez orada asosiy sahifaga yo'naltirilasiz...",
   "ErrorPage": "404 - Sahifa topilmadi",
-    "GoHome": "Bosh sahifaga o'tish"
+    "GoHome": "Bosh sahifaga o'tish",
+    "BookNow": "Joy band qilish"
+
 
 }
