--- a/src/languages/rus/russian.json
+++ b/src/languages/rus/russian.json
@@ -18,7 +18,8 @@
     "movePage":" This page doesn’t exist. You’ll be redirected to the homepage shortlwdawdy...",
     "ErrorPage": "404 - Page Not Founddad",
     "GoHome": "Go to Homepage Nowsws",
-    "BookNow": "Book Now"
+    "BookNow": "Book Now",
+    "days": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
 
 
 
