--- a/src/languages/en/english.json
+++ b/src/languages/en/english.json
@@ -18,5 +18,6 @@
     "movePage": " This page doesn’t exist. You’ll be redirected to the homepage shortly...",
     "ErrorPage": "404 - Page Not Found",
     "GoHome": "Go to Homepage Now",
-    "BookNow": "Book Now"
+    "BookNow": "Book Now",
+    "days": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
 }
