--- a/src/languages/rus/russian.json
+++ b/src/languages/rus/russian.json
@@ -1,26 +1,40 @@
 {
-    "welcome_message": "Salomdds",
-    "greeting": "Hush kelibsizdcs!",
-    "searchbar": "Qidiruv: salonlar,dssdssartaroshlar, go'zallik salonlari",
-    "hometext": "Bosh saswhifa",
-    "searchtext": "Qidirudasv",
-    "bookingtext": "Buyurtmdasda",
-    "moreText": "Barasdchasi ",
-    "FullCategories": "Alldad",
-    "SeeAll": "vse",
-    "Services": "Servicesdadaw",
+  "welcome_message": "Salomdds",
+  "greeting": "Hush kelibsizdcs!",
+  "searchbar": "Qidiruv: salonlar,dssdssartaroshlar, go'zallik salonlari",
+  "hometext": "Bosh saswhifa",
+  "searchtext": "Qidirudasv",
+  "bookingtext": "Buyurtmdasda",
+  "moreText": "Barasdchasi ",
+  "FullCategories": "Alldad",
+  "SeeAll": "vse",
+  "Services": "Servicesdadaw",
   "Duration": "Durationawdqw",
   "minutes": "minutesqweq",
   "Booking": "Bookingfeww",
   "Home": "Home2eed",
   "Search": "Searchdad",
-  "Profile": "Profiledaw",
-    "movePage":" This page doesn’t exist. You’ll be redirected to the homepage shortlwdawdy...",
-    "ErrorPage": "404 - Page Not Founddad",
-    "GoHome": "Go to Homepage Nowsws",
-    "BookNow": "Book Now",
-    "days": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday", "Saturday", "Sunday"]
-
-
-
+  "Profile": "Профиль",
+  "movePage": " This page doesn’t exist. You’ll be redirected to the homepage shortlwdawdy...",
+  "ErrorPage": "404 - Page Not Founddad",
+  "GoHome": "Go to Homepage Nowsws",
+  "BookNow": "Book Now",
+  "days": [
+    "Monday",
+    "Tuesday",
+    "Wednesday",
+    "Thursday",
+    "Friday",
+    "Saturday",
+    "Sunday"
+  ],
+  "MyDetails": "Мои данные",
+  "BookingHistory": "История бронирований",
+  " Back": "Назад",
+  " Completed": "Завершено",
+  "Upcoming": "Предстоящее",
+  " NoBookings": "Бронирований не найдено.",
+  " Name": "Имя",
+  " Email": "Электронная почта",
+  "TelegramID": "Telegram ID"
 }
