--- a/src/languages/en/english.json
+++ b/src/languages/en/english.json
@@ -40,5 +40,29 @@
     "ProfileLoading":"Loading Profile...",
     "ProfileError": "Error: Could not load profile.",
     "NoPhone":"No phone number",
-    "Loading": "Loading..."
+    "Loading": "Loading...",
+    "no_services_available": "No services available in this category",
+    "not_found": "Service not found",
+    "reviews": "reviews",
+    "Editor's Choice": "Editor's Choice",
+    "Top Rated": "Top Rated",
+    "Best Prices": "Best Prices",
+    "Near You": "Near You",
+    "NoResults": "No results found for",
+    "with": "with",
+    "LogOut": "Log Out",
+    "YouRequestFor": "Your request for",
+    "has been sent.": "has been sent.",
+    "ConfirmationSoon": "You will receive a confirmation message on Telegram shortly.",
+    "Request Sent!": "Request Sent!",
+    "Book Your Visit": "Book Your Visit",
+    "Enter your name": "Enter your name",
+    "Phone Number": "Phone Number",
+    "Select Date and Time": "Select Date and Time",
+    "Choose a Time": "Choose a Time",
+    "days.": "days.",
+    "No available time slots for this day.": "No available time slots for this day.",
+    "Request Booking": "Request Booking",
+    "Sending Request...": "Sending Request..."
+
 }
