--- a/src/languages/rus/russian.json
+++ b/src/languages/rus/russian.json
@@ -40,6 +40,29 @@
   "ProfileError": "Ошибка: Не удалось загрузить профиль.",
   "ProfileLoading": "Загрузка профиля...",
   "NoPhone":"Нет номера телефона",
-  "Loading": "Загрузка..."
+  "Loading": "Загрузка...",
+  "no_services_available": "В этой категории нет доступных услуг",
+  "not_found": "Сервис не найден",
+  "reviews": "отзывы",
+  "Editor's Choice": "Выбор редакции",
+  "Top Rated": "Самые популярные",
+  "Best Prices": "Лучшие цены",
+  "Near You": "Рядом с вами",
+  "NoResults": "По вашему запросу ничего не найдено для",
+  "with": "с",
+  "LogOut": "Выйти",
+  "YouRequestFor": "Ваш запрос на",
+  "has been sent.": "был отправлен.",
+  "ConfirmationSoon": "Вскоре вы получите сообщение с подтверждением в Telegram.",
+  "Request Sent!": "Запрос отправлен!",
+  "Book Your Visit": "Забронируйте свой визит",
+  "Enter your name": "Введите ваше имя",
+  "Phone Number": "Номер телефона",
+  "Select Date and Time": "Выберите дату и время",
+  "Choose a Time": "Выберите время",
+  "days.": "дней.",
+  "No available time slots for this day.": "Нет доступных временных слотов на этот день.",
+  "Request Booking": "Запросить бронирование",
+  "Sending Request...": "Отправка запроса..."
   
 }
