--- a/src/languages/uz/uzbek.json
+++ b/src/languages/uz/uzbek.json
@@ -40,6 +40,29 @@
   "ProfileLoading":"Profil yuklanmoqda...",
   "ProfileError": "Xato: Profilni yuklashda xatolik yuz berdi",
   "NoPhone":"Telefon raqami mavjud emas",
-  "Loading": "Yuklanmoqda..."
+  "Loading": "Yuklanmoqda...",
+  "no_services_available": "Bu kategoriyada mavjud xizmatlar yo'q",
+  "not_found": "Xizmat topilmadi",
+  "reviews": "sharhlar",
+  "Editor's Choice": "Tahririyat tanlovi",
+  "Top Rated": "Eng yuqori baholangan",
+  "Best Prices": "Eng yaxshi narxlar",
+  "Near You": "Sizga yaqin",
+  "NoResults": "Sizning so'rovingiz bo'yicha hech narsa topilmadi",
+  "with": "bilan",
+  "LogOut": "Chiqish",
+  "YouRequestFor": "Sizning so'rovingiz",
+  "has been sent.": "yuborildi.",
+  "ConfirmationSoon": "Tez orada Telegramda tasdiqlash xabarini olasiz.",
+  "Request Sent!": "So'rov yuborildi!",
+  "Book Your Visit": "Tashrifingizni bron qiling",
+  "Enter your name": "Ismingizni kiriting",
+  "Phone Number": "Telefon raqami",
+  "Select Date and Time": "Sana va vaqtni tanlang",
+  "Choose a Time": "Vaqtni tanlang",
+  "days.": "kun.",
+  "No available time slots for this day.": "Ushbu kun uchun mavjud vaqt yo'q.",
+  "Request Booking": "Buyurtma so'rovi",
+  "Sending Request...": "So'rov yuborilmoqda..."
 
   }
