--- a/src/languages/rus/russian.json
+++ b/src/languages/rus/russian.json
@@ -1,32 +1,32 @@
 {
-  "welcome_message": "Salomdds",
-  "greeting": "Hush kelibsizdcs!",
-  "searchbar": "Qidiruv: salonlar,dssdssartaroshlar, go'zallik salonlari",
-  "hometext": "Bosh saswhifa",
-  "searchtext": "Qidirudasv",
-  "bookingtext": "Buyurtmdasda",
-  "moreText": "Barasdchasi ",
-  "FullCategories": "Alldad",
-  "SeeAll": "vse",
-  "Services": "Servicesdadaw",
-  "Duration": "Durationawdqw",
-  "minutes": "minutesqweq",
-  "Booking": "Bookingfeww",
-  "Home": "Home2eed",
-  "Search": "Searchdad",
+  "welcome_message": "Privet",
+  "greeting": "Добро пожаловать!",
+  "searchbar": " Поиск: салоны, парикмахерские, салоны красоты",
+  "hometext": "Главная ",
+  "searchtext": "Поиск ",
+  "bookingtext": "Бронирование",
+  "moreText": "Все",
+  "FullCategories": "Все",
+  "SeeAll": "Все",
+  "Services": "Услуги",
+  "Duration": "Продолжительность",
+  "minutes": "минут",
+  "Booking": "Бронирование",
+  "Home": "Главная",
+  "Search": "Поиск",
   "Profile": "Профиль",
-  "movePage": " This page doesn’t exist. You’ll be redirected to the homepage shortlwdawdy...",
-  "ErrorPage": "404 - Page Not Founddad",
-  "GoHome": "Go to Homepage Nowsws",
-  "BookNow": "Book Now",
+  "movePage": " Эта страница не существует. Вы будете перенаправлены на главную страницу в ближайшее время...",
+  "ErrorPage": "404 - Страница не найдена",
+  "GoHome": "Перейти на главную страницу",
+  "BookNow": "Забронировать сейчас",
   "days": [
-    "Monday",
-    "Tuesday",
-    "Wednesday",
-    "Thursday",
-    "Friday",
-    "Saturday",
-    "Sunday"
+    "Понедельник",
+    "Вторник",
+    "Среда",
+    "Четверг",
+    "Пятница",
+    "Суббота",
+    "Воскресенье"
   ],
   "MyDetails": "Мои данные",
   "BookingHistory": "История бронирований",
